Pass 1380: L1 silent failure — SpoilageEnhancedForgeSilentFailureTest for Forge path guards (935/0/0)
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>